# hypersync-to-parquet

./: .env-sample  Cargo.toml  README.md  prompt.txt  search_local_parquet_files.py  search_parquet_files_on_s3.py
sql/: blocks.sql  db.md  logs.sql  transactions.sql  transfers.sql
src/: balance_checker.rs  main.rs  transaction_writer.rs  transfers.rs
