[package]
name = "all_erc20"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
serde_json = "1"
env_logger = "0.4"
url = "2.5.2"
chrono = "0.4.38"
hypersync-client = "0.17.0"
ethers = "2.0.14"
tokio-postgres = "0.7"
bytes = "1.4"
futures = "0.3"
bigdecimal = "0.4"
