[package]
name = "all_erc20"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1"
env_logger = "0.4"
url = "2.5.2"
chrono = "0.4.38"
hypersync-client = "0.17.0"
ethers = "2.0.14"
bytes = "1.4"
bigdecimal = "0.4"
tokio-postgres-rustls = "0.12"
rustls = "0.23"
rustls-pemfile = "2"
deadpool-postgres = "0.11.0"
tokio-rustls = "0.23"
futures = "0.3.29"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }


